--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ keycloak.resource=spring-boot-app
 keycloak.credentials.secret=cD4mF3odJKfM3gMwucHNpSrrVYj0tjeK
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.rabbitmq.addresses=amqps://dkroyglc:jpCcQnLa9icySo5Q8bkAht_eaNWa8719@prawn.rmq.cloudamqp.com/dkroyglc
+spring.rabbitmq.addresses=amqps://qvvqiaub:gPlhwXhpzvnQB5c0vQmmZK67OPGQrj0Q@jaragua.lmq.cloudamqp.com/qvvqiaub
 spring.rabbitmq.queue=ms.email
 
 # Configurações de upload de arquivos
